# chip8-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  wit-scds.8o
.github/workflows/: deploy.yml
chip8_core/: Cargo.toml
chip8_core/src/: display.rs  font.rs  instruction.rs  keymap  keypad.rs  lib.rs  quirks.rs  time.rs
chip8_wasm/: Cargo.toml  LICENSE_MIT
chip8_wasm/src/: lib.rs  utils.rs
chip8_web/: package-lock.json  package.json  vite.config.ts
chip8_web/public/roms/: wit-scds.ch8
chip8_web/src/: App.svelte  Chip8.svelte  app.css  canvas.ts  main.ts  stores.ts
chip8_web/src/lib/: CanvasDisplay.svelte  Chip8.svelte  DevTools.svelte  HexView.svelte  NavBar.svelte  RegisterDisplay.svelte  RomSwitcher.svelte  SettingsMenu.svelte
chip8_web/src/lib/DevWidgets/: HexView.svelte  RegisterDisplay.svelte
chip8_web/src/lib/SettingsWidgets/: QuirkMenu.svelte
chip8_web/src/util/: format.ts  functions.ts  roms.ts  setImmediate.ts
src/: display.rs  handler.rs  instruction.rs  lib.rs  main.rs  time.rs
