[package]
name = "chip8_emu"
version.workspace = true
authors.workspace = true
edition.workspace = true

[workspace]
members = ["chip8_core", "chip8_wasm"]

[workspace.package]
version = "0.1.0"
authors = ["Mason Osborn <mason.osborn@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
homepage = "https://chaoticwyrme.github.com/chip8-rs/"
repository = "https://github.com/ChaoticWyrme/chip8-rs"
description = "A chip-8 emulator built in rust, with a svelte frontend"

[workspace.dependencies]
log = "0.4.17"
wasm-bindgen = "0.2.63"
byteorder = "1"

[dependencies]
chip8_core = { path = "chip8_core" }
env_logger = "0.9.3"

[profile.release]
# Optimize for file size on release
opt-level = "s"
debug = true
