[package]
name = "chip8_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.21"
byteorder = "1"
serde_json = "1.0.87"
maplit = "1.0.2"
rand = "0.8.5"
enum-primitive-derive = "0.2.2"
num-traits = "0.2.15"
log.workspace = true
bitvec = "1.0.1"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[dependencies.getrandom]
features = ["js"]
