[package]
name = "chip8-wasm"
version = "0.1.0"
authors = ["Mason Osborn <mason.osborn@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
chip8_core = { path = "../chip8_core" }
wasm-bindgen.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3", features = ["console"] }
console_log = { version = "1", features = ["color"] }
log.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
